--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "menu.c" "main.c"
-                    PRIV_REQUIRES driver esp_adc HD44780
+                    PRIV_REQUIRES driver esp_adc
                     INCLUDE_DIRS "")
